logs/blueberry.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Mako-1.0.7.egg-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Routes-2.4.1.dist-info'...
Listing './lib/python3.5/site-packages/WebHelpers-1.3.egg-info'...
Listing './lib/python3.5/site-packages/WebOb-1.7.4.dist-info'...
Listing './lib/python3.5/site-packages/WebTest-2.0.29.dist-info'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/blueberry'...
Listing './lib/python3.5/site-packages/blueberry/controllers'...
Compiling './lib/python3.5/site-packages/blueberry/controllers/core.py'...
***   File "./lib/python3.5/site-packages/blueberry/controllers/core.py", line 82
    except HTTPException, httpe:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/blueberry/decorators'...
Compiling './lib/python3.5/site-packages/blueberry/decorators/__init__.py'...
***   File "./lib/python3.5/site-packages/blueberry/decorators/__init__.py", line 52
    except formencode.Invalid, e:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/blueberry/deploy.py'...
***   File "./lib/python3.5/site-packages/blueberry/deploy.py", line 25
    print 'Running reloading file monitor'
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/blueberry/tests'...
Listing './lib/python3.5/site-packages/blueberry/utils'...
Compiling './lib/python3.5/site-packages/blueberry/utils/__init__.py'...
***   File "./lib/python3.5/site-packages/blueberry/utils/__init__.py", line 38
    except (TypeError, ValueError), e:
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/blueberry/utils/daemonize.py'...
***   File "./lib/python3.5/site-packages/blueberry/utils/daemonize.py", line 9
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/blueberry/web'...
Listing './lib/python3.5/site-packages/blueberry/wsgiserver'...
Compiling './lib/python3.5/site-packages/blueberry/wsgiserver/__init__.py'...
***   File "./lib/python3.5/site-packages/blueberry/wsgiserver/__init__.py", line 404
    except ValueError, ex:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/blueberry-0.2.egg-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/mako'...
Listing './lib/python3.5/site-packages/mako/ext'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/nose'...
Listing './lib/python3.5/site-packages/nose/ext'...
Listing './lib/python3.5/site-packages/nose/plugins'...
Listing './lib/python3.5/site-packages/nose/sphinx'...
Listing './lib/python3.5/site-packages/nose/tools'...
Listing './lib/python3.5/site-packages/nose-1.3.7.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/repoze'...
Listing './lib/python3.5/site-packages/repoze/lru'...
Listing './lib/python3.5/site-packages/repoze.lru-0.7.dist-info'...
Listing './lib/python3.5/site-packages/routes'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/waitress'...
Listing './lib/python3.5/site-packages/waitress/tests'...
Listing './lib/python3.5/site-packages/waitress/tests/fixtureapps'...
Listing './lib/python3.5/site-packages/waitress-1.1.0.dist-info'...
Listing './lib/python3.5/site-packages/webhelpers'...
Listing './lib/python3.5/site-packages/webhelpers/html'...
Compiling './lib/python3.5/site-packages/webhelpers/html/grid_demo.py'...
***   File "./lib/python3.5/site-packages/webhelpers/html/grid_demo.py", line 289
    print "... writing '%s'" % filename
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/webhelpers/html/render.py'...
***   File "./lib/python3.5/site-packages/webhelpers/html/render.py", line 395
    print render(html)
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/webhelpers/markdown.py'...
***   File "./lib/python3.5/site-packages/webhelpers/markdown.py", line 1865
    print OPTPARSE_WARNING
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/webhelpers/media.py'...
***   File "./lib/python3.5/site-packages/webhelpers/media.py", line 120
    print "%s:" % apath,
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/webhelpers/paginate.py'...
***   File "./lib/python3.5/site-packages/webhelpers/paginate.py", line 250
    raise Exception, "__getitem__ without slicing not supported"
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/webhelpers/public'...
Listing './lib/python3.5/site-packages/webhelpers/public/stylesheets'...
Listing './lib/python3.5/site-packages/webhelpers/pylonslib'...
Compiling './lib/python3.5/site-packages/webhelpers/textile.py'...
***   File "./lib/python3.5/site-packages/webhelpers/textile.py", line 2882
    print textile('tell me about textile.', head_offset=1)
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/webob'...
Listing './lib/python3.5/site-packages/webtest'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/python-wheels'...
